--- a/web/app/templates/layout.html
+++ b/web/app/templates/layout.html
@@ -12,6 +12,12 @@ This is me trying to fool around with that and build something.
 	<title>Stop and Frisk</title>
 	<script src="../static/js/layout.js"></script>
 	<link rel="stylesheet" href="../static/css/layout.css">
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="http://d3js.org/topojson.v1.min.js"></script>
+  <script src="http://d3js.org/queue.v1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
 </head>
 <body>
 
