--- a/web/app/templates/timeline-graph.html
+++ b/web/app/templates/timeline-graph.html
@@ -48,8 +48,24 @@
 		.append("g")
 		.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
+		svg.append("g")
+		.attr("class", "x axis")
+		.attr("transform", "translate(0," + height + ")")
+		.call(xAxis);
+
+		svg.append("g")
+		.attr("class", "y axis")
+		.call(yAxis)
+		.append("text")
+		.attr("transform", "rotate(-90)")
+		.attr("y", 6)
+		.attr("dy", ".71em")
+		.style("text-anchor", "end")
+		.text("Chance of Stop/Frisk");
+
 	//http://bl.ocks.org/mbostock/3884955
 	function analyze(data){
+		var first_time = !data;
 		data = data || [];
 
 		data.forEach(function(d) {
@@ -67,49 +83,48 @@
 		y.domain([_.min([chanceExtent[0], totalChanceExtent[0]]),
 						  _.max([chanceExtent[1], totalChanceExtent[1]])]);
 
+	  if (!first_time) {
+		  var transition_svg = d3.select('#graph_content').transition();
+		  transition_svg.select('.x.axis').duration(750).call(xAxis)
+		  transition_svg.select('.y.axis').duration(750).call(yAxis)
+	  } else {
+		  svg.select('.x.axis').call(xAxis)
+		  svg.select('.y.axis').call(yAxis)
 
-		svg.append("g")
-		.attr("class", "x axis")
-		.attr("transform", "translate(0," + height + ")")
-		.call(xAxis);
-
-		svg.append("g")
-		.attr("class", "y axis")
-		.call(yAxis)
-		.append("text")
-		.attr("transform", "rotate(-90)")
-		.attr("y", 6)
-		.attr("dy", ".71em")
-		.style("text-anchor", "end")
-		.text("Chance of Stop/Frisk");
+	  }
 
 		var series = [];
 		if (!_.isEmpty(data)) {
 			series.push({name : 'current', values : data});
+		} else {
+			series.push({name : 'current', values : []});
 		}
 
 		if (!_.isEmpty(totals)) {
 			series.push({name : 'totals', values : totals});
 		}
 
-		console.log(series);
+		var lines = svg.selectAll(".line")
+		if (first_time) {
+			lines.data(series)
+				.enter()
+				.append("path")
+				.attr("class", function(d) {return 'line ' + d.name;})
+				.attr("d", function(d) { return line(d.values); });
+		} else {
+				lines = svg.selectAll('.line')
+				.data(series)
+				.transition()
+				.attr("class", function(d) { return 'line ' + d.name;})
+				.attr("d", function(d) { return line(d.values); });
+		}
 
-		var city = svg.selectAll(".city")
-			.data(series)
-			.enter()
-			.append("g")
-			.attr("class", "city");
-
-		city.append("path")
-			.attr("class", function(d) {return 'line ' + d.name;})
-			.attr("d", function(d) { return line(d.values); })
-
-		city.append("text")
-			.datum(function(d) { return {name: d.name, value: _.last(d.values)} })
-			.attr("transform", function(d) { return "translate(" + x(d.value.date) + "," + y(d.value.chance) + ")"; })
-			.attr("x", 3)
-			.attr("dy", ".35em")
-			.text(function(d) { return d.name; });
+		// lines.append("text")
+		// 	.datum(function(d) { return {name: d.name, value: _.last(d.values)} })
+		// 	.attr("transform", function(d) { return "translate(" + x(d.value.date) + "," + y(d.value.chance) + ")"; })
+		// 	.attr("x", 3)
+		// 	.attr("dy", ".35em")
+		// 	.text(function(d) { return d.name; });
 	}
 
 	analyze();
