--- a/web/app/templates/layout.html
+++ b/web/app/templates/layout.html
@@ -10,18 +10,21 @@ This is me trying to fool around with that and build something.
 <html>
 <head>
 	<title>Stop and Frisk</title>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="../static/js/vendor/jquery.nav.js"></script>
 	<script src="../static/js/layout.js"></script>
 	<link rel="stylesheet" href="../static/css/layout.css">
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="http://d3js.org/topojson.v1.min.js"></script>
   <script src="http://d3js.org/queue.v1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
 </head>
 <body>
-
-  <div id="selection_div" class="page_div">
+  <div id="header">
+    <h1>STOP AND FRISK DATA</h1>
+  </div>
+  <div id="selection_div">
      {% include 'selection.html' %}
   </div>
   <div id="heatmap_div" class="center">
