--- a/web/app/templates/layout.html
+++ b/web/app/templates/layout.html
@@ -21,7 +21,7 @@ This is me trying to fool around with that and build something.
   <script src="http://d3js.org/colorbrewer.v1.min.js"></script>
 </head>
 <body>
-  <div id="header">
+  <div id="header" class="page_div">
     <h1>STOP AND FRISK DATA</h1>
   </div>
   <div id="selection_div">
