--- a/web/app/static/css/layout.css
+++ b/web/app/static/css/layout.css
@@ -3,7 +3,6 @@
 
 html{
 	font-family: 'Open Sans';
-	background: #232323;
 	color: white;
 }
 
@@ -15,6 +14,7 @@ h5,
 h6 {
 	font-family: 'Open Sans';
 	font-weight: 600;
+	background: none;
 	color: white;
 }
 .page_div{
