--- a/web/app/templates/selection.html
+++ b/web/app/templates/selection.html
@@ -51,7 +51,11 @@
 	</div>
 	</div>
 
-		<button id="get_selected" type="button" class="button_style" onclick="getSelected()">Get Selected</button>
+	<svg style="display:none;" id="get_selected" class="arrows" onClick="getSelected()">
+			<path class="a1" d="M0 0 L30 32 L60 0"></path>
+			<path class="a2" d="M0 20 L30 52 L60 20"></path>
+			<path class="a3" d="M0 40 L30 72 L60 40"></path>
+	</svg>
 </div>
 
 </body>
