--- a/web/app/templates/timeline-graph.html
+++ b/web/app/templates/timeline-graph.html
@@ -6,7 +6,7 @@
 </head>
 
 <body onload="timeline_graph_init()">
-	<div id="graph_content"></div>
+	<div id="graph_content" class="center"></div>
 
 	<script>
 	var totals = {{timeline_data | safe}};
@@ -95,8 +95,6 @@
 
 		data = _.sortBy(data, 'date');
 
-		console.log(data)
-
 		var dateExtent = d3.extent(data, function(d){ return d.date; });
 		var chanceExtent = d3.extent(data, function(d) { return d.chance; });
 
@@ -134,18 +132,18 @@
 			series.push({name : 'current', values : []});
 		}
 
-		
+
 		var lines = svg.selectAll(".line")
 		if (first_time) {
 			lines.data(series)
 				.enter()
 				.append("path")
 				.attr("class", function(d) {return 'line ' + d.name;})
-				.attr("d", function(d) { 
-					if(d.name == "totals") 
+				.attr("d", function(d) {
+					if(d.name == "totals")
 						{
 							return line(d.values);
-						} 
+						}
 						else {
 							return line2(d.values);
 						}
@@ -155,23 +153,16 @@
 				.data(series)
 				.transition()
 				.attr("class", function(d) { return 'line ' + d.name;})
-				.attr("d", function(d) { 
-					if(d.name == "totals") 
+				.attr("d", function(d) {
+					if(d.name == "totals")
 						{
 							return line(d.values);
-						} 
+						}
 						else {
 							return line2(d.values);
 						}
 					});
 		}
-
-		// lines.append("text")
-		// 	.datum(function(d) { return {name: d.name, value: _.last(d.values)} })
-		// 	.attr("transform", function(d) { return "translate(" + x(d.value.date) + "," + y(d.value.chance) + ")"; })
-		// 	.attr("x", 3)
-		// 	.attr("dy", ".35em")
-		// 	.text(function(d) { return d.name; });
 	}
 
 	analyze();
