--- a/web/app/templates/sf_heatmap.html
+++ b/web/app/templates/sf_heatmap.html
@@ -95,12 +95,12 @@ body {
   background: black;
 }
 
-.map_tooltip{ background-color:rgba(68,136,187,0.5);;
-          margin: 10px;
-          height: 50px;
-          width: 150px;
-          padding-left: 10px;
-          padding-top: 10px;
+.map_tooltip{
+    background-color:rgba(68,136,187,0.5);;
+    margin: 10px;
+    width: 150px;
+    padding-left: 10px;
+    padding-top: 10px;
     -webkit-border-radius:10px;
     -moz-border-radius:10px;
     border-radius:10px;
@@ -114,7 +114,8 @@ body {
 <script>
 
 var heatmap_data = {};
-
+var demographics = {{ demographics|safe }};
+var income_map = {{ income|safe }};
 d3.helper = {};
 
 d3.helper.tooltip = function(accessor){
@@ -248,6 +249,20 @@ function ready(error, ny) {
           var prob = heatmap_data[getID(d)]
           if (prob) {
             str += ("<br/>Prob: "+ prob);
+          }
+
+          var demogs = demographics[getID(d)];
+          if (demogs) {
+            str += "<br>Demographics:<br>";
+            str += "<b>White:</b>" + demogs[0];
+            str += "<br><b>Black:</b>" + demogs[1];
+            str += "<br><b>Hispanic:</b>" + demogs[2];
+            str += "<br><b>Other:</b>" + demogs[3];
+          }
+
+          var income = income_map[getID(d)];
+          if (income && (income != 'N') && (income != '(X)') && (income != '-' )) {
+            str += "<br>Income: " + income;
           }
           return str;
         }
