--- a/web/app/templates/timeline-graph.html
+++ b/web/app/templates/timeline-graph.html
@@ -70,7 +70,7 @@
 		.attr("transform", "rotate(-90)")
 		.attr("y", 6)
 		.attr("dy", ".71em")
-		.style("text-anchor", "end")
+		.attr("class", "tick_text")
 		.text("Total Stop/Frisks");
 
 		svg.append("g")
@@ -81,11 +81,12 @@
 		.attr("transform", "rotate(-90) translate(0, -20)")
 		.attr("y", 6)
 		.attr("dy", ".71em")
-		.style("text-anchor", "end")
+		.attr('class', 'tick_text')
 		.text("Chance of Stop/Frisk");
 
 	//http://bl.ocks.org/mbostock/3884955
 	function analyze(data){
+		console.log(data);
 		var first_time = !data;
 		data = data || [];
 
