flask endpts for zoom to bounding box

--- a/web/app/templates/sf_heatmap.html
+++ b/web/app/templates/sf_heatmap.html
@@ -344,7 +344,6 @@ function repaint(new_data) {
 }
 
 function clicked(d) {
-  console.log(getMouseCoords());
   if (active.node() === this) return reset();
   active.classed("active", false);
   active = d3.select(this).classed("active", true);
@@ -356,6 +355,29 @@ function clicked(d) {
       y = (bounds[0][1] + bounds[1][1]) / 2,
       scale = .9 / Math.max(dx / width, dy / height),
       translate = [width / 2 - scale * x, height / 2 - scale * y];
+
+  var query = {
+    'min_lat=' : projection.invert(bounds[1])[1],
+    'max_lat=' : projection.invert(bounds[0])[1],
+    'min_lon=' : projection.invert(bounds[0])[0],
+    'max_lon=' : projection.invert(bounds[1])[0],
+  };
+
+  var url = '/zoom?';
+  _.each(query, function(val, key, idx) {
+    url += key + val + '&';
+  });
+
+  $.ajax({
+    url : url,
+    type : 'GET',
+    success : function(response) {
+      console.log(response);
+    },
+    failure : function(response) {
+      console.log(response);
+    }
+  });
 
 
   svg.transition()
