likelihood in top bar - needs to be styled

--- a/web/app/templates/selection.html
+++ b/web/app/templates/selection.html
@@ -9,7 +9,11 @@
 	<div class="flex" id="selection_content">
 
 	<div id="identity">
-		<span id="iam">I am... </span><span id="list"/>
+		<span class="identitext" id="iam">As a </span>
+		<span id="list"></span>
+		<span class="identitext"> I am </span>
+		<a href="#heatmap_div"><span id="likelihood">How many</span></a>
+		<span class="identitext"> times as likely to be stopped & frisked</span>
 	</div>
 	<div id="to-select">
 		<div id="selectables">
